samples/_failures_safe/1761257970_29c9f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d55884a.c:146:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 | int matrix
      | ^~~
